# MW-Ansible-Wordpress

./: .gitignore  README.md  Vagrantfile  ansible.cfg  inventory.ini  playbook.yml  pyproject.toml  requirements.yml
group_vars/: all.yml  rocky.yml  ubuntu.yml
roles/galaxy/cibarraleonel.nginx_wordpress/meta/: .galaxy_install_info
roles/galaxy/geerlingguy.mysql/meta/: .galaxy_install_info
roles/geerlingguy.mysql/meta/: .galaxy_install_info
roles/nginx_wordpress/: EJEMPLO_EJECUCION.md  MOLECULE_TESTING.md  README_MOLECULE.md
roles/nginx_wordpress/defaults/: main.yml
roles/nginx_wordpress/handlers/: main.yml
roles/nginx_wordpress/meta/: main.yml
roles/nginx_wordpress/molecule/: README.md
roles/nginx_wordpress/molecule/default/: Dockerfile  converge.yml  molecule.yml  prepare.yml  requirements.yml  verify.yml
roles/nginx_wordpress/nginx_wordpressll/defaults/: main.yml
roles/nginx_wordpress/nginx_wordpressll/handlers/: main.yml
roles/nginx_wordpress/nginx_wordpressll/tasks/: main.yml
roles/nginx_wordpress/nginx_wordpressll/tests/: test.yml
roles/nginx_wordpress/nginx_wordpressll/vars/: main.yml
roles/nginx_wordpress/tasks/: main.yml
roles/nginx_wordpress/tests/: test.yml
roles/nginx_wordpress/vars/: debian.yml  main.yml  ubuntu.yml
