[tool.poetry]
name = "project-ansible-wordpress"
version = "0.1.0"
description = "Resolución de Actividad I de IaC"
authors = ["Leo Ibarra <cibarraleonel@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
ansible = ">=11.0.0,<11.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"